syntax = "proto3";

package nibiru.spot.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/NibiruChain/nibiru/x/spot/types";

// Configuration parameters for the pool.
message PoolParams {
  string swap_fee = 1 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"swap_fee\"",
    (gogoproto.nullable) = false
  ];

  string exit_fee = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.moretags) = "yaml:\"exit_fee\"",
    (gogoproto.nullable) = false
  ];

  // Amplification Parameter (A): Larger value of A make the curve better
  // resemble a straight line in the center (when pool is near balance).  Highly
  // volatile assets should use a lower value, while assets that are closer
  // together may be best with a higher value. This is only used if the
  // pool_type is set to 1 (stableswap)
  string A = 3 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"amplification\"",
    (gogoproto.nullable) = false
  ];

  nibiru.spot.v1.PoolType pool_type = 4
      [ (gogoproto.moretags) = "yaml:\"pool_type\"" ];
}

// - `balancer`: Balancer are pools defined by the equation xy=k, extended by
// the weighs introduced by Balancer.
// - `stableswap`: Stableswap pools are defined by a combination of
// constant-product and constant-sum pool
enum PoolType {
  BALANCER = 0;
  STABLESWAP = 1;
}

// Which assets the pool contains.
message PoolAsset {
  // Coins we are talking about,
  // the denomination must be unique amongst all PoolAssets for this pool.
  cosmos.base.v1beta1.Coin token = 1
      [ (gogoproto.moretags) = "yaml:\"token\"", (gogoproto.nullable) = false ];
  // Weight that is not normalized. This weight must be less than 2^50
  string weight = 2 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"weight\"",
    (gogoproto.nullable) = false
  ];
}

message Pool {
  option (gogoproto.goproto_getters) = false;

  // The pool id.
  uint64 id = 1;

  // The pool account address.
  string address = 2 [ (gogoproto.moretags) = "yaml:\"address\"" ];

  // Fees and other pool-specific parameters.
  nibiru.spot.v1.PoolParams pool_params = 3 [
    (gogoproto.moretags) = "yaml:\"pool_params\"",
    (gogoproto.nullable) = false
  ];

  // These are assumed to be sorted by denomiation.
  // They contain the pool asset and the information about the weight
  repeated PoolAsset pool_assets = 4 [
    (gogoproto.moretags) = "yaml:\"pool_assets\"",
    (gogoproto.nullable) = false
  ];

  // sum of all non-normalized pool weights
  string total_weight = 5 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.moretags) = "yaml:\"total_weight\"",
    (gogoproto.nullable) = false
  ];

  // sum of all LP tokens sent out
  cosmos.base.v1beta1.Coin total_shares = 6 [
    (gogoproto.moretags) = "yaml:\"total_shares\"",
    (gogoproto.nullable) = false
  ];
}
